--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -75,10 +75,10 @@ jobs:
           lcov --extract coverage.info '**/boost/mqtt5/*' --output-file coverage.info
 
       - name: Upload coverage reports to Codecov
-        uses: codecov/codecov-action@v4
+        uses: codecov/codecov-action@v5
         with:
           verbose: true
-          file: coverage.info
+          files: coverage.info
           disable_search: true
           fail_ci_if_error: true
-          plugin: noop
+          plugins: noop
