codecov v5 requires curl

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -46,7 +46,7 @@ jobs:
           apt-get update
           apt-get -y install --no-install-recommends \
             sudo git g++ cmake make openssl libssl-dev ca-certificates pkg-config \
-            python3 lcov gpg gpg-agent
+            python3 lcov gpg gpg-agent curl
 
       - name: Install compiler
         run: sudo apt-get install -y ${{ matrix.install }}
